styles/styles.css
/*
 * Copyright 2020 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

 /* stylelint-disable no-descending-specificity */
@import url('colors.css');
@import url('containers.css');
@import url('typography.css');

:root {
  /* brand */
  --white: #FFFCF3;
  --blue: #0B21E0;
  --red: #FB0619;
  --red-light: #fceff0;
  --blue-light: #C1C8FF;
  --blue-lightest: #EDEFFA;
  --primary: var(--blue);
  --pale-pink: #E0CCD5;
  --pale-orange: #E0D1CC;
  --pale-yellow: #E0DFCC;
  --pale-green: #D6E0CC;
  --pale-teal: #CCE0DF;
  --pale-blue: #CCD7E0;
  --pale-purple: #D5CCE0;
  --specialty-color-blue: #dcfffb;
  --gradient: conic-gradient(
    var(--pale-orange),
    var(--pale-pink) 15%,
    var(--pale-teal),
    var(--pale-purple) 35%, 
    var(--pale-blue) 56.25%,
    var(--pale-teal),
    var(--pale-green) 75%,
    var(--pale-yellow) 81.25%, 
    var(--pale-orange));

  /* layers */
  --layer-elevated: var(--white);
  --layer-base: var(--layer-elevated);
  --layer-depth: var(--gray-50);
  --layer-pasteboard: var(--gray-100);

  /* colors */
  --color-background: var(--layer-base);
  --color-text: var(--primary);
  --color-link: var(--blue);
  --color-link-hover: var(--blue-light);

  /* fonts */
  --body-font-family: poppins, poppins-fallback, sans-serif;
  --heading-font-family: acuminextracondensedbold, acumin-fallback, sans-serif;
  --code-font-family: monospace;

  /* spacing */
  --spacing-xxxxl: var(--spacing-800);
  --spacing-xxxl: var(--spacing-700);
  --spacing-xxl: var(--spacing-600);
  --spacing-xl:  var(--spacing-500);
  --spacing-l:   var(--spacing-400);
  --spacing-m:   var(--spacing-300);
  --spacing-s:   var(--spacing-200);
  --spacing-xs:  var(--spacing-100);

  /* shadows */
  --shadow-default: 0 1px 6px 0 var(--transparent-black-300);
  --shadow-hover: 0 2px 8px 0 var(--transparent-black-300);
  --shadow-dragged: 0 3px 12px 0 var(--transparent-black-300);

  /* widths and heights */
  --header-height: 78px;
  --header-width: 140px;
  --horizontal-spacing: var(--spacing-l);
  --site-width: 900px;
}

@media (width >= 900px) {
  :root {
    /* widths and heights */
    --horizontal-spacing: var(--spacing-xl);
  }
}

/* fallback fonts */
@font-face {
  font-family: poppins-fallback;
  size-adjust: 94.1%;
  ascent-override: 95%;
  descent-override: 20%;
  line-gap-override: 5%;
  src: local('Futura'), local('Century Gothic'), local('Arial');
}

@font-face {
  font-family: acumin-fallback;
  size-adjust: 88.8%;
  ascent-override: 90%;
  descent-override: 25%;
  line-gap-override: 5%;
  src: local('Arial Narrow'), local('Helvetica Condensed'), local('Arial');
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  background: var(--color-background);
}

body {
  display: none;
  margin: 0;
  font-family: var(--body-font-family);
  font-size: var(--body-size-m);
  line-height: var(--line-height-m);
  background-color: var(--layer-base);
  color: var(--color-text);
}

body.appear {
  display: block;
}

body[data-scroll='disabled'] {
  overflow-y: hidden;
}

body ::selection {
  background-color: yellow;
  color: var(--color-text);
}

header {
  position: fixed;
  min-height: var(--header-height);
  transition: height 0.2s, min-height 0.2s;
}

header,
header .header,
footer,
footer .footer {
  visibility: hidden;
}

header.appear,
header .header[data-block-status='loaded'],
footer.appear,
footer .footer[data-block-status='loaded'] {
  visibility: visible;
}

main {
  margin-top: calc(var(--header-height) + var(--horizontal-spacing));
}

main.home {
  margin-top: var(--header-height);
}

@media (width >= 900px) {
  body {
    min-height: 100dvh;
    font-style: normal !important;
  }
}

/* sections */
main > .section > div {
  max-width: var(--site-width);
  margin: var(--horizontal-spacing) auto;
  padding: 0 var(--horizontal-spacing);
}

/* section metadata */
main .section.light {
  background-color: var(--gray-100);
}

main .section.dark {
  background-color: var(--gray-600);
}

main .section.hero-header-l > div {
  display: flex;
  flex-flow: column;
  align-items: center;
  padding: var(--spacing-xxl) 0;
}

main .section.hero-header-l > div > h1 {
  font-size: var(--heading-size-xxxl);
}

main .section.hero-header > div {
  display: flex;
  justify-content: center;
  flex-flow: column;
  align-items: center;
  text-align: center;
  padding: var(--spacing-xxl) var(--horizontal-spacing);
}

@media (width >= 900px) {
  main .section.hero-header-l > div > h1 {
    font-size: var(--heading-size-xxxxl);
  }
  
  main .section.hero-header-l > div > p {
    font-size: var(--heading-size-m);
  }
}

/* images and icons */
p.img-wrapper {
  margin: 0;
  line-height: 0;
}

img {
  display: block;
  width: 100%;
  height: auto;
}

.icon {
  line-height: 0;
}

.icon svg,
.icon img {
  width: 1em;
  height: 1em;
  fill: currentcolor;
  color: currentcolor;
  transition: fill 0.2s;
}

i.symbol {
  display: inline-block;
  position: relative;
  width: 1em;
  height: 1em;
  vertical-align: middle;
}

i.symbol::before,
i.symbol::after {
  content: '';
  position: absolute;
}

i.symbol.symbol-add,
i.symbol.symbol-subtract {
  width: 1rem;
}

i.symbol.symbol-add::before,
i.symbol.symbol-subtract::before,
i.symbol.symbol-add::after {
  background-color: currentcolor;
}

i.symbol.symbol-add::before,
i.symbol.symbol-subtract::before {
  top: 50%;
  left: 0;
  right: 0;
  transform: translateY(-50%);
  height: var(--border-m);
}
/* ... */

